# sportsbook-bi-analysis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: create-adr.md  db-modeling.md  update-business-rules.md  update-data-catalog.md
.cursor/rules/: global.mdc
docker/: init.sql
docs/business-context/: competitive.md  journeys.md  kpis.md  personas.md  vision.md
docs/product-context/: business-rules.md  glossary.md
docs/technical-context/: codebase-guide.md  stack.md
sql/bronze/: 001_create_schema.sql  002_create_cashouts.sql  003_create_customer.sql  004_create_customer_crm_level.sql  005_create_events.sql  006_create_sportsbook.sql
sql/gold/: 001_create_schema.sql  002_create_customer_performance.sql  003_create_customer_segments.sql  004_create_betting_preferences.sql  005_create_crm_performance.sql  006_create_season_summary.sql  007_create_cashout_analysis.sql
sql/silver/: 001_create_schema.sql  002_create_customer.sql  002_create_dim_customer.sql  003_create_customer_crm_level.sql  003_create_dim_crm_level.sql  004_create_dim_event.sql  004_create_events.sql  005_create_dim_market.sql  005_create_sportsbook.sql  006_create_cashouts.sql  006_create_dim_channel.sql  007_create_dim_date.sql  008_create_fact_bets.sql  009_create_fact_cashouts.sql
src/: db.py
src/agent/: bi_agent.py  tools.py
src/dashboard/: app.py  filters.py
src/ingestion/: loader.py  run_ingestion.py
tests/: conftest.py  test_filters.py  test_gold.py  test_ingestion.py  test_silver.py
tests/fixtures/: Events.csv  (+4 more)
(+27 files in other folders)
