[project]
name = "sportsbook-bi-analysis"
version = "0.1.0"
description = "Análise de dados da temporada de futebol romeno 2018/19 — Sportsbook Product Team"
requires-python = ">=3.12"
dependencies = [
    # Interface web
    "streamlit>=1.32.0",
    # Framework de agentes de IA
    "agno>=1.4.0",
    # SDK da Anthropic (Claude)
    "anthropic>=0.25.0",
    # Banco de dados
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # Manipulação de dados
    "pandas>=2.2.0",
    # Variáveis de ambiente
    "python-dotenv>=1.0.0",
    # Visualizações
    "plotly>=5.20.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
